--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-render-static",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "react-render-static",
   "author": "Kamil Ziajka <k@zet.email>",
   "license": "MIT",
@@ -37,6 +37,7 @@
   "dependencies": {
     "@babel/core": "^7.12.0",
     "@babel/register": "^7.12.0",
+    "commander": "^6.1.0",
     "react": "^16.14.0",
     "xml-formatter": "^2.3.0"
   }
