--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-render-static",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "react-render-static",
   "author": "Kamil Ziajka <k@zet.email>",
   "license": "MIT",
@@ -28,6 +28,7 @@
     "@babel/preset-env": "^7.12.0",
     "@babel/preset-react": "^7.12.0",
     "@babel/preset-typescript": "^7.12.0",
+    "@types/jest": "^27.0.1",
     "@types/react": "^16.9.0",
     "jest": "^26.5.0",
     "rimraf": "^3.0.0",
